k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-backend-service
spec:
  # Using LoadBalancer to get an external IP from Azure
  type: LoadBalancer 
  selector:
    app: erp-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
